--- a/index.html
+++ b/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
 <html lang="eng">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Oppimispeli</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="math-section">
-    <div class="math-header">
-      <div class="math-header-content">
-        <div class="math-header-column">
-          <h2 class="math-title">Matematiikka</h2>
-        </div>
-        <div class="coming-soon-column">
-          <div class="coming-soon">Tulossa</div>
-        </div>
-      </div>
-    </div>
-    <div class="games-section">
-      <div class="games-container">
-        <div class="games-content">
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <section class="math-section">
+      <header class="math-header">
+        <div class="math-header-content">
           <div class="math-header-column">
-            <button class="game-button" tabindex="0">Peli 1</button>
+            <h2 class="math-title">Matematiikka</h2>
           </div>
-          <div class="game-column">
-            <button class="game-button" tabindex="0">Peli 2</button>
+          <div class="coming-soon-column">
+            <div class="coming-soon">Tulossa</div>
           </div>
         </div>
-      </div>
-    </div>
-  </div>
-</body>
+      </header>
+      <section class="games-section">
+        <div class="games-container">
+          <div class="games-content">
+            <div class="math-header-column">
+              <button
+                class="game-button"
+                tabindex="0"
+                onclick="window.location.href='peli1.html';"
+              >
+                Peli 1
+              </button>
+            </div>
+            <div class="game-column">
+              <button class="game-button" tabindex="0">Peli 2</button>
+            </div>
+          </div>
+        </div>
+      </section>
+    </section>
+  </body>
 </html>
