--- a/groupManagement.html
+++ b/groupManagement.html
@@ -14,6 +14,7 @@
             background-color: #cfe8ff;
             display: flex;
             flex-direction: column;
+            
             align-items: center;
             height: 100vh;
             margin: 0;
@@ -62,15 +63,20 @@
       <div class="header-bottom">
         <div class="nav-buttons">
           <a href="{{ url_for('frontPage') }}">
-            <button class="coming-soon-btn">Ryhmien hallinnointi</button>
+            <button class="coming-soon-btn">Etusivu (ehkä)</button>
           </a>
         </div>
       </div>
     </header>
     <!-- Uusi UI (toka osio sivulla)-->
-    <div class="container" style="flex-direction: row;">
-        <div class="sidebar" style="width: 30%;">
-            <div class="name-box">Luokka 1A</div>
+    <div class="container" style="flex-direction: row; height:75% ;">
+        <div class="sidebar" style="width: 30%";>
+          <div class="dropdown">
+            <button class="dropbtn" style="width: 100%;">Ryhmät</button>
+            <div class="dropdown-content" style="width: 100%;">
+              <a href="{{ url_for('math_menu', grade=3) }}">Ryhmä A</a>
+            </div>
+          </div>
         </div>
         <div class="content-box" style="width: 70%;">
             Luodut ryhmät
