--- a/teacherMenu.html
+++ b/teacherMenu.html
@@ -21,8 +21,7 @@
                   class="icon-image" alt="Avatar" />
             </button>
             <div class="dropdown-content">
-              <a href="#">Profiili</a>
-              <a href="#">Pelitulokset</a>
+              <a class="opettajaNimi" href="#">Opettaja nimi</a>
               <a href="{{ url_for('logout') }}">Kirjaudu ulos</a>
             </div>
           </div>
